Fix search spacing

--- a/themes/hermit-v2/assets/scss/_custom.scss
+++ b/themes/hermit-v2/assets/scss/_custom.scss
@@ -1255,6 +1255,6 @@ input::placeholder {
   margin: 0 !important;
 }
 .search-button{
-  margin-right: -17px;
-  margin-left: 5px;
+  margin-right: -13px;
+  margin-left: 13px;
 }
